--- a/location-page/style.css
+++ b/location-page/style.css
@@ -188,9 +188,7 @@ font-family: 'Outfit';
         padding-top: 5%;
         /* grid-column: 2/2; */
     }
-    .street {
-        /* grid-column: 2/2; */
-    }
+
     .street > p {
         padding: 0;
         margin-top: 0;
@@ -204,7 +202,7 @@ font-family: 'Outfit';
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-
+        width: 100%;
         /* z-index: 2; */
 
         /* position: absolute;
@@ -248,5 +246,133 @@ font-family: 'Outfit';
     .links {
 
         justify-content: center;
+    }
+}
+
+/* DESKTOP design */
+@media screen and (min-width:996px) {
+    body, html {
+        /* height: 100vh; */
+        z-index: 0;
+        /* height: 100%; */
+
+    }
+
+    .map-image-div {
+        content: url(/art-gallery/desktop/image-map@2x.png);
+        width: 100vw;
+    }
+
+    .button-location-div {
+        margin-left: 10%;
+        text-transform: uppercase;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 24px;
+
+        /* identical to box height */
+        letter-spacing: 3.63636px;
+    }
+    #chevron-right {
+        transform: scaleX(-1);
+        -moz-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        -ms-transform: scaleX(-1);
+    }
+
+    .main-text {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        
+    }
+
+    .main-part2 {
+        display: flex;
+        flex-direction: column;
+        
+        width: 50%;
+    }
+
+    .location-header {
+        /* grid-column: 1/1;
+        grid-row: 1/2; */
+        padding: 6% 0 0 0;
+        
+    }
+    .street-header {
+        padding-top: 5%;
+        /* grid-column: 2/2; */
+    }
+
+    .street > p {
+        padding: 0;
+        margin-top: 0;
+    }
+
+    .footer-nav {
+        display: flex;
+    }
+
+    .footer-nav-location {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+        /* z-index: 2; */
+
+        /* position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0; */
+
+
+        /* position: absolute;
+        bottom: 0;
+        width:100%;
+        height: 162px; */
+        background-color: #D5966C;
+            
+    }
+    .footer-hdr > h3 {
+        margin: 0;
+        padding: 0;
+        text-transform: uppercase;
+        width: 140%;
+    }
+
+    .footer-hdr {
+        padding: 0;
+    }
+    .footer-txt > p {
+        margin: 0;
+        padding: 0;
+    }
+
+    .footer-txt {
+        width: 30%;
+    }
+    
+    .socials {
+        margin: 5% 5% 0 0;
+        padding: 0;
+        
+    }
+
+    .links {
+
+        justify-content: center;
+    }
+    
+    .button-location-div:hover #chevron-right {
+        background-color: black;
+    }
+
+    .button-location-div:hover #location_button {
+        background-color:#D5966C;
+    }
+
+    .links:hover {
+        color: white;
     }
 }
